# DreadComp

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt  sha256
.github/workflows/: build.yml
Extract/: Extract.md
data/: function.csv  rom_extract.csv  string.csv
docs/: Decompiling.md  Install.md  ghidra.md
src/: noerror.cpp
toolchain/: ToolchainNX64.cmake
tools/: clean.py  config.toml  makeClass.py  objdiff.py  setup.py
